# CASBI

./: .gitignore  .readthedocs.yml  COPYING.md  FILESTRUCTURE.md  README.md  TODO.md  pyproject.toml  setup.py
CASBI/: __init__.py  __main__.py  create_template_library.py  distributed_training.py  generator.py  inference.py  preprocessing.py  run_distributed_training.sh  utils.py
CASBI/generator/fff/: __init__.py  fff_model.py  fff_model_condeverylayer.py  fff_model_train.py  jacobian.py  loss.py  m_fff.py  m_loss.py  my_model_train.py
CASBI/generator/nf/: __init__.py  distributed_training.py  generator.py  nf_model.py
CASBI/sbi/: CNN.py  conf_yaml.py  embedding.py  gen_halo.py  inference.py  n_halo_finder.py
CASBI/sbi/two_step_inference/: CNN.py  CNN_skip.py  conf_yaml.py  gen_halo.py
CASBI/utils/: CNN.py  __init__.py  create_dataframe.py  create_file.py  create_histogram.py  create_template_library.py  create_test_val_set.py  metrics.py  plots.py  utils.py
doc/: CASBI.utils.rst  api.rst  conf.py  index.rst  modules.rst  test.rst  utils.rst
doc/_autosummary/: CASBI.generator.rst  CASBI.rst  CASBI.utils.rst
doc/_build/.doctrees/: api.doctree
doc/_templates/: module.rst
doc/docs/: CASBI.generator.fff.rst  CASBI.generator.nf.rst  CASBI.generator.rst  CASBI.rst  CASBI.sbi.rst  CASBI.sbi.two_step_inference.rst  CASBI.utils.rst  modules.rst  tests.rst
doc/source/: conf.py  demo.nblink  index.rst
doc/source/api/: index.rst
docs/source/: conf.py  index.md
docs/source/apidocs/: index.rst
latex/: MasterThesis.bib  abstract.tex  analysis.tex  casbi.tex  conclusion.tex  main.run.xml  main.tex  previous_work.tex  results.tex  sbi.tex  tikz.tex
new_notebook/: preprocessing.ipynb
notebooks/: analysis.py  analysis_fullldataset.py  analysis_hist.py  analysis_ratio.py  complete_inference.ipynb  complete_inference_classification.ipynb  conditions_space.ipynb  demo.ipynb  flow_chart_plot copy.ipynb  flow_chart_plot.ipynb  full_dataset.ipynb  generate_dataframe.ipynb  generate_file.ipynb  generate_halo.ipynb  ltu_ili copy 2.ipynb  ltu_ili copy.ipynb  ltu_ili_NLE.ipynb  ltu_ili_NPE_3parameters.ipynb  mae.py  number_of_particles.ipynb  optuna_single_halo_output.ipynb  paper.mcstyle  plot_for_latex.ipynb  preprocessing.ipynb  results.ipynb  sbi_tutorial.ipynb  single_halo_inference copy.ipynb  single_halo_inference.ipynb  template_librarby.py  template_library_and_inference.ipynb  template_libray_class.ipynb  test.ipynb  test_set_evaluation.ipynb  tmux_training_newdirectory.py  training.yaml  training_distributed.ipynb  training_set_study.ipynb  uncertainty_testing_results.ipynb  uncertanties_testing.ipynb
notebooks/data/: data.yaml  read_the_pkl.ipynb  run.py  training.yaml
notebooks/ltu_ili_test/: ltu_ili.ipynb  ltu_ili_SNPE_savegalaxy.ipynb  read_the_pkl.ipynb  reproducibility.ipynb  run.ipynb  run.py  run_cnf.ipynb  training.yaml
notebooks/ltu_ili_test/lampe/: CNN.py  optuna_distributed.py  reproducibility.ipynb  results_optuna.ipynb  run.ipynb  run.py  summary.json  training.yaml
notebooks/ltu_ili_test/n_subhalo_finder/: CNN.py  CNN_skip.py  cnn_training.ipynb  cnn_training.py  data.yaml  optuna_distributed.py  run.py  (+6 more)
notebooks/nihao_uhd/: extract_x_theta_uhd.py  nihao_uhd_infernce.ipynb  preprocessing_uhd.ipynb  ytree2halo.ipynb
notebooks/preprocessing/: generate_file.ipynb  preprocessing.ipynb  test.ipynb
notebooks/script/: CNN_skip.py  analysis.py  analysis_fullldataset.py  analysis_hist.py  analysis_ratio.py  mae.py  optuna_distributed_single_halo.py  tmux_training_FFF.py  tmux_training_newdirectory.py
notebooks/surrogate_simulator/: diffusion.ipynb  test_set_evaluation.ipynb  training_distributed.ipynb
paper/: generate_dataframe.ipynb  generate_histogram.ipynb  optuna_distributed.py  paper_inference.ipynb
paper /: optuna_distributed.py
tests/: test_CASBI.py  test_cli.py
(+144 files in other folders)
