# This section describes the requirements of the build/installation
# process itself. Being able to do this was the original reason to
# introduce pyproject.toml
[build-system]
requires = [
    "setuptools >=61",
]
build-backend = "setuptools.build_meta"

# This section provides general project metadata that is used across
# a variety of build tools. Notably, the version specified here is the
# single source of truth for CASBI's version
[project]
name = "CASBI"
description = "Add short description here"
readme = "README.md"
maintainers = [
    { name = "Your Name", email = "your@email.com" },
]
version = "0.0.1"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "click",
    "lightning == 2.2.4", 
    "ltu-ili@git+https://github.com/maho3/ltu-ili",
    "FrEIA",
    "matplotlib >= 3.7.1",
    "numpy >= 1.26.4",
    "optuna == 3.6.0",
    "pandas >= 1.5.3", 
    "pyyaml",
    "pyarrow == 15.0.2",
    "pynbody >= 1.6.0", 
    "pyparsing",
    "seaborn >= 0.12.2",
    "scikit-learn >= 1.4.1",
    "scipy == 1.13.0",
    "sbibm",
    "sphinx",
    "tensorboard >= 2.16.2",
    "torch > 2.2.2",
    "tqdm >= 4.65.0",
    "ytree >= 3.2.1",
]


[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
    "nbval",
]
docs = [
    "ipykernel",
    "nbsphinx",
    "nbsphinx-link",
    "sphinx",
    "sphinx_mdinclude",
    "sphinx_rtd_theme",
    "furo",
]

# Command line scripts installed as part of the installation
[project.scripts]
CASBI = "CASBI.__main__:main"

# The following section contains setuptools-specific configuration
# options. For a full reference of available options, check the overview
# at https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
packages = [
    "CASBI",
    "CASBI.generator",
    "CASBI.generator.nf",
    "CASBI.generator.fff",
    "CASBI.utils",
    "CASBI.sbi",
]

# The following is the configuration for the pytest test suite
[tool.pytest.ini_options]
testpaths = [
    "tests",
    "notebooks",
]
